--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ij2-Za-dBx">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -3486,7 +3486,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPb-Ae-ixT" customClass="JRGraphView">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPb-Ae-ixT">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -3518,10 +3518,10 @@
                                 <exclude reference="dPb-Ae-ixT"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="gHK-DY-ncq"/>
                                 <exclude reference="68z-F8-Gwh"/>
                                 <exclude reference="KAk-0z-9J0"/>
                                 <exclude reference="TzS-qy-6gw"/>
-                                <exclude reference="gHK-DY-ncq"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -3529,10 +3529,10 @@
                                 <include reference="dPb-Ae-ixT"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="gHK-DY-ncq"/>
                                 <include reference="68z-F8-Gwh"/>
                                 <include reference="KAk-0z-9J0"/>
                                 <include reference="TzS-qy-6gw"/>
-                                <include reference="gHK-DY-ncq"/>
                             </mask>
                         </variation>
                     </view>
