--- a/CHCloudHealth/Base.lproj/Login.storyboard
+++ b/CHCloudHealth/Base.lproj/Login.storyboard
@@ -884,7 +884,7 @@
                                     <constraint firstAttribute="height" constant="45" id="Ra6-GD-bdU"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="提交">
+                                <state key="normal" title="确定">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
